<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_icon"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menu_color"
                android:icon="@drawable/ic_color_lens"
                android:title="@string/brush_color"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_brush_size"
                android:icon="@drawable/ic_brush"
                android:title="@string/brush_size"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_brush_style"
                android:icon="@drawable/ic_style"
                android:title="@string/brush_style"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_download"
                android:icon="@drawable/ic_download"
                android:title="@string/download"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_clear"
                android:icon="@drawable/ic_cleaning_services"
                android:title="@string/clear"
                app:showAsAction="always" />

            <item
                android:id="@+id/menu_save"
                android:icon="@drawable/ic_save"
                android:title="@string/save"
                app:showAsAction="always" />

        </menu>

    </item>

</menu>