<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/brush_color"
        android:textColor="@color/color1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/alpha"
                android:textAllCaps="true"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/red"
                android:textAllCaps="true"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/green"
                android:textAllCaps="true"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/blue"
                android:textAllCaps="true"
                android:textColor="@color/color1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/seekBar_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"
                android:padding="14dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white">

        <View
            android:id="@+id/view_color"
            android:layout_width="match_parent"
            android:layout_height="45dp" />

    </LinearLayout>

</LinearLayout>